# aim

./: .gitignore  CLAUDE.md  CODEOWNERS  Justfile  LICENSE  README.md  hook_writer.py  install_hooks.py  server.py  summarizer.py  tmux_backend.py
menubar/: claude_instances.lua
src/: Cargo.toml  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: tmux
src-tauri/src/: auth.rs  error.rs  hooks.rs  lib.rs  main.rs  paths.rs
src-tauri/src/native/: mod.rs  notifications.rs  poller.rs  sound.rs  tray.rs  webview_menu.rs
src-tauri/src/server/: config.rs  instances.rs  mod.rs  settings.rs  summarizer.rs  terminal.rs  transcript.rs  types.rs
src-tauri/src/tmux/: command.rs  mod.rs  pty.rs  session.rs
src/resources/: hook_writer.py
src/src/: lib.rs  main.rs  test_util.rs
src/src/domain/: error.rs  instance.rs  mod.rs  transcript.rs
src/src/http/: auth.rs  dto.rs  mod.rs  router.rs
src/src/http/handlers/: settings.rs  terminal.rs
src/src/infra/: mod.rs  paths.rs
src/src/infra/tmux/: command.rs  mod.rs  pty.rs  session.rs
src/src/native/: mod.rs  notifications.rs  poller.rs  sound.rs  tray.rs
src/src/services/: config.rs  hooks.rs  instances.rs  mod.rs  summarizer.rs  transcript.rs
src/tests/: pinning.rs  pinning_io.rs
static/: app.js  index.html  sprite.js  style.css
static/lib/: pure.js
tests/frontend/: package-lock.json  package.json  pure.test.js  vitest.config.js
