[package]
name = "aim"
version = "0.1.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
thiserror = "2"
rand = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "aim_lib"
path = "src/lib.rs"

[[bin]]
name = "aim"
path = "src/main.rs"
